# klanten_beheerpaneel

./: .env-example  .gitignore  README.md  app.py  customer_functions.py  invoice_functions.py  launcher.py  models.py  pyproject.toml  requirements.txt  service_functions.py
forms/: customer_form.py  invoice_form.py  meal_form.py  service_form.py
templates/: customer_overview.html  index.html  invoice.html  layout.html  login.html  new_customer.html  new_service.html  services.html
